# epoch-emotion-classification-task

./: readme.md
CNN/: README.md  pyproject.toml  requirements.txt
CNN/inference/: infer.py
CNN/training/: audio_emotion_model.pth  emotion_mappings.json  train.py  train_model.ipynb
