[tool.poetry]
name = "audio-emotion-recognition"
version = "0.1.0"
description = "Deep learning model for recognizing emotions in audio"
authors = ["Harshvardhan Patidar <harsh15044@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"
librosa = "^0.10.0"
numpy = "^1.24.0"
scipy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"